fixed z-index video

--- a/src/app/containers/Ataraxia/containers/Main/main.css
+++ b/src/app/containers/Ataraxia/containers/Main/main.css
@@ -14,7 +14,7 @@
     margin-bottom: 80px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background-color: black;
     video { 
@@ -27,9 +27,11 @@
         -webkit-transform: translateX(-50%) translateY(-50%);
         transform: translateX(-50%) translateY(-50%);
     }
+    img {
+        margin-top: 50px;
+    }
     .icon {
         width: 60px;
-        margin-top: 50px;
         &:hover {
             opacity: 0.7;
         }
